# living-room-parser-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md  build.rs
js/: Cargo.toml  Makefile  index.js  package.json  parser.js  parser.wasm
js/pkg/: index.js  package-lock.json  package.json
js/pkg/src/: parser.js  parser.wasm
js/src/: lib.rs
js/tests/: parser.js
src/: lib.rs  living_room_grammar.rustpeg  term_json.rs
